// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`betterer should throws when reading the results file fails 1`] = `
Array [
  "
   / | /     _         _   _
 '-.ooo.-'  | |__  ___| |_| |_ ___ _ __ ___ _ __
---ooooo--- | '_ // _ / __| __/ _ / '__/ _ / '__|
 .-'ooo'-.  | |_)|  __/ |_| ||  __/ | |  __/ |
   / | /    |_.__//___|/__|/__/___|_|  /___|_|

",
  "
   / | /     _         _   _
 '-.ooo.-'  | |__  ___| |_| |_ ___ _ __ ___ _ __
---ooooo--- | '_ // _ / __| __/ _ / '__/ _ / '__|
 .-'ooo'-.  | |_)|  __/ |_| ||  __/ | |  __/ |
   / | /    |_.__//___|/__|/__/___|_|  /___|_|


Error: could not read results from \\"<project>/fixtures/test-betterer-failed-reading/.betterer.results\\". 😔
      at Object.parse (<project>/packages/betterer/dist/results/parser.js:0:0)
      at BettererResults.getExpectedNames (<project>/packages/betterer/dist/results/results.js:0:0)
      at BettererContextΩ._initObsolete (<project>/packages/betterer/dist/context/context.js:0:0)
      at BettererContextΩ.run (<project>/packages/betterer/dist/context/context.js:0:0)
      at <project>/packages/betterer/dist/betterer.js:0:0
      at runContext (<project>/packages/betterer/dist/betterer.js:0:0)
      at <project>/test/betterer-failed.spec.ts:0:0
      at Object.<anonymous> (<project>/test/betterer-failed.spec.ts:0:0)
",
  "
   / | /     _         _   _
 '-.ooo.-'  | |__  ___| |_| |_ ___ _ __ ___ _ __
---ooooo--- | '_ // _ / __| __/ _ / '__/ _ / '__|
 .-'ooo'-.  | |_)|  __/ |_| ||  __/ | |  __/ |
   / | /    |_.__//___|/__|/__/___|_|  /___|_|


Error: could not read results from \\"<project>/fixtures/test-betterer-failed-reading/.betterer.results\\". 😔
      at Object.parse (<project>/packages/betterer/dist/results/parser.js:0:0)
      at BettererResults.getExpectedNames (<project>/packages/betterer/dist/results/results.js:0:0)
      at BettererContextΩ._initObsolete (<project>/packages/betterer/dist/context/context.js:0:0)
      at BettererContextΩ.run (<project>/packages/betterer/dist/context/context.js:0:0)
      at <project>/packages/betterer/dist/betterer.js:0:0
      at runContext (<project>/packages/betterer/dist/betterer.js:0:0)
      at <project>/test/betterer-failed.spec.ts:0:0
      at Object.<anonymous> (<project>/test/betterer-failed.spec.ts:0:0)
",
]
`;

exports[`betterer should work when a test fails 1`] = `
Array [
  "
   / | /     _         _   _
 '-.ooo.-'  | |__  ___| |_| |_ ___ _ __ ___ _ __
---ooooo--- | '_ // _ / __| __/ _ / '__/ _ / '__|
 .-'ooo'-.  | |_)|  __/ |_| ||  __/ | |  __/ |
   / | /    |_.__//___|/__|/__/___|_|  /___|_|

",
  "
   / | /     _         _   _
 '-.ooo.-'  | |__  ___| |_| |_ ___ _ __ ___ _ __
---ooooo--- | '_ // _ / __| __/ _ / '__/ _ / '__|
 .-'ooo'-.  | |_)|  __/ |_| ||  __/ | |  __/ |
   / | /    |_.__//___|/__|/__/___|_|  /___|_|

🌟 Betterer (0ms):
",
  "
   / | /     _         _   _
 '-.ooo.-'  | |__  ___| |_| |_ ___ _ __ ___ _ __
---ooooo--- | '_ // _ / __| __/ _ / '__/ _ / '__|
 .-'ooo'-.  | |_)|  __/ |_| ||  __/ | |  __/ |
   / | /    |_.__//___|/__|/__/___|_|  /___|_|

🌟 Betterer (0ms): 1 test running...
🤔 throws error: running \\"throws error\\"!
",
  "
   / | /     _         _   _
 '-.ooo.-'  | |__  ___| |_| |_ ___ _ __ ___ _ __
---ooooo--- | '_ // _ / __| __/ _ / '__/ _ / '__|
 .-'ooo'-.  | |_)|  __/ |_| ||  __/ | |  __/ |
   / | /    |_.__//___|/__|/__/___|_|  /___|_|

🌟 Betterer (0ms): 1 test running...
🔥 throws error: OH NO!
",
  "
   / | /     _         _   _
 '-.ooo.-'  | |__  ___| |_| |_ ___ _ __ ___ _ __
---ooooo--- | '_ // _ / __| __/ _ / '__/ _ / '__|
 .-'ooo'-.  | |_)|  __/ |_| ||  __/ | |  __/ |
   / | /    |_.__//___|/__|/__/___|_|  /___|_|

🌟 Betterer (0ms): 1 test running...

Error: OH NO!
      at Object.test (<project>/fixtures/test-betterer-failed/.betterer.js:0:0)
      at runTest (<project>/packages/betterer/dist/runner/runner.js:0:0)
      at <project>/packages/betterer/dist/runner/runner.js:0:0
      at <project>/packages/betterer/dist/runner/runner.js:0:0
      at BettererContextΩ.run (<project>/packages/betterer/dist/context/context.js:0:0)
      at <project>/packages/betterer/dist/betterer.js:0:0
      at runContext (<project>/packages/betterer/dist/betterer.js:0:0)
      at Object.<anonymous> (<project>/test/betterer-failed.spec.ts:0:0)
🔥 throws error: OH NO!
",
  "
   / | /     _         _   _
 '-.ooo.-'  | |__  ___| |_| |_ ___ _ __ ___ _ __
---ooooo--- | '_ // _ / __| __/ _ / '__/ _ / '__|
 .-'ooo'-.  | |_)|  __/ |_| ||  __/ | |  __/ |
   / | /    |_.__//___|/__|/__/___|_|  /___|_|

💥 Betterer (0ms): 1 test done! 1 test errored!

Error: OH NO!
      at Object.test (<project>/fixtures/test-betterer-failed/.betterer.js:0:0)
      at runTest (<project>/packages/betterer/dist/runner/runner.js:0:0)
      at <project>/packages/betterer/dist/runner/runner.js:0:0
      at <project>/packages/betterer/dist/runner/runner.js:0:0
      at BettererContextΩ.run (<project>/packages/betterer/dist/context/context.js:0:0)
      at <project>/packages/betterer/dist/betterer.js:0:0
      at runContext (<project>/packages/betterer/dist/betterer.js:0:0)
      at Object.<anonymous> (<project>/test/betterer-failed.spec.ts:0:0)
🔥 throws error: OH NO!
",
  "
   / | /     _         _   _
 '-.ooo.-'  | |__  ___| |_| |_ ___ _ __ ___ _ __
---ooooo--- | '_ // _ / __| __/ _ / '__/ _ / '__|
 .-'ooo'-.  | |_)|  __/ |_| ||  __/ | |  __/ |
   / | /    |_.__//___|/__|/__/___|_|  /___|_|

💥 Betterer (0ms): 1 test done! 1 test errored!
🔥 throws error: OH NO!

Error: OH NO!
      at Object.test (<project>/fixtures/test-betterer-failed/.betterer.js:0:0)
      at runTest (<project>/packages/betterer/dist/runner/runner.js:0:0)
      at <project>/packages/betterer/dist/runner/runner.js:0:0
      at <project>/packages/betterer/dist/runner/runner.js:0:0
      at BettererContextΩ.run (<project>/packages/betterer/dist/context/context.js:0:0)
      at <project>/packages/betterer/dist/betterer.js:0:0
      at runContext (<project>/packages/betterer/dist/betterer.js:0:0)
      at Object.<anonymous> (<project>/test/betterer-failed.spec.ts:0:0)
",
  "
   / | /     _         _   _
 '-.ooo.-'  | |__  ___| |_| |_ ___ _ __ ___ _ __
---ooooo--- | '_ // _ / __| __/ _ / '__/ _ / '__|
 .-'ooo'-.  | |_)|  __/ |_| ||  __/ | |  __/ |
   / | /    |_.__//___|/__|/__/___|_|  /___|_|

💥 Betterer (0ms): 1 test done! 1 test errored!
🔥 throws error: OH NO!

Error: OH NO!
      at Object.test (<project>/fixtures/test-betterer-failed/.betterer.js:0:0)
      at runTest (<project>/packages/betterer/dist/runner/runner.js:0:0)
      at <project>/packages/betterer/dist/runner/runner.js:0:0
      at <project>/packages/betterer/dist/runner/runner.js:0:0
      at BettererContextΩ.run (<project>/packages/betterer/dist/context/context.js:0:0)
      at <project>/packages/betterer/dist/betterer.js:0:0
      at runContext (<project>/packages/betterer/dist/betterer.js:0:0)
      at Object.<anonymous> (<project>/test/betterer-failed.spec.ts:0:0)

0 tests got checked. 🤔
1 test failed to run. 🔥

",
]
`;

exports[`betterer should work when a test fails 2`] = `"// BETTERER RESULTS V2."`;
